placeholder text spacing issue

--- a/assets/scss/_search.scss
+++ b/assets/scss/_search.scss
@@ -148,7 +148,7 @@ ul.list-unstyled {
               display: inline-block;
               width: 12px;
               height: 12px;
-              margin-right: 20px;
+              margin-right: 30px;
               background:
                   linear-gradient(45deg, rgba(0,0,0,0) 0%,rgba(0,0,0,0) 43%,#000 45%,#000 55%,rgba(0,0,0,0) 57%,rgba(0,0,0,0) 100%),
                   linear-gradient(135deg, transparent 0%,transparent 43%,#000 45%,#000 55%,transparent 57%,transparent 100%);
@@ -165,4 +165,8 @@ ul.list-unstyled {
           }
       }
   }
+}
+
+input#searchInput {
+  padding-left: 50px;
 }
