--- a/assets/scss/style.css
+++ b/assets/scss/style.css
@@ -1306,7 +1306,7 @@ ul.list-unstyled {
   display: inline-block;
   width: 12px;
   height: 12px;
-  margin-right: 20px;
+  margin-right: 30px;
   background: linear-gradient(45deg, rgba(0, 0, 0, 0) 0%, rgba(0, 0, 0, 0) 43%, #000 45%, #000 55%, rgba(0, 0, 0, 0) 57%, rgba(0, 0, 0, 0) 100%), linear-gradient(135deg, transparent 0%, transparent 43%, #000 45%, #000 55%, transparent 57%, transparent 100%);
 }
 .bbpc_search_form_wrapper .input-wrapper input[type=search].left {
@@ -1314,6 +1314,10 @@ ul.list-unstyled {
 }
 .bbpc_search_form_wrapper .input-wrapper input[type=search].right::-webkit-search-cancel-button {
   margin-right: 50px;
+}
+
+input#searchInput {
+  padding-left: 50px;
 }
 
 .forum-with-topics {
